--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="release_date">Release Date</string>
     <string name="rating">Rating</string>
     <string name="overview">Overview</string>
+    <string name="no_favorite">No favorites yet</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
